# RGBStreamer

./: CMakeLists.txt  README.md  config.json
src/: CMakeLists.txt  CaptureModule.cpp  CaptureModule.h  ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  MainLoop.cpp  RGBProcessor.cpp  RGBProcessor.h  RainbowFlow.cpp  RainbowFlow.h  UDPSender.cpp  UDPSender.h  main.cpp
tests/: CMakeLists.txt
